--- a/Home.html
+++ b/Home.html
@@ -43,8 +43,43 @@
     </header>
     <!--Header Stop-->
     
-    <section>
+    <!--Showcase Start-->
+    <section class="showcase">
+        <div class="container">
+            <div class="showcase-text">
+                <h1 class="showcase-header">WELCOME TO bmarketo SHOP</h1>
+                <p class="showcase-paragraph">Exclusive Chair gold Collection.</p>
+                <Button class="showcase-button">SHOP NOW</Button>
+            </div>
+            <img class="showcase-image" src="IMAGES/625x647.svg"/>
+        </div>
+    </section>
+    <!--Showcase Stop-->
 
+    <section class="best-collection">
+        <div class="container">
+           <h1 class="best-collection-header">Best Collection</h1>
+           <div class="best-collection-tags">
+            <p class="best-collection-tag">All</p>
+            <p class="best-collection-tag">/</p>
+            <p class="best-collection-tag">Bags</p>
+            <p class="best-collection-tag">/</p>
+            <p class="best-collection-tag">Dress</p>
+            <p class="best-collection-tag">/</p>
+            <p class="best-collection-tag">Decoration</p>
+            <p class="best-collection-tag">/</p>
+            <p class="best-collection-tag">Essentials</p>
+            <p class="best-collection-tag">/</p>
+            <p class="best-collection-tag">Interior</p>
+            <p class="best-collection-tag">/</p>
+            <p class="best-collection-tag">Laptop</p>
+            <p class="best-collection-tag">/</p>
+            <p class="best-collection-tag">Mobile</p>
+            <p class="best-collection-tag">/</p>
+            <p class="best-collection-tag">Beauty</p>
+           </div> 
+
+        </div>
     </section>
     
 </body>
