best collection done

--- a/Home.html
+++ b/Home.html
@@ -77,8 +77,49 @@
             <p class="best-collection-tag">Mobile</p>
             <p class="best-collection-tag">/</p>
             <p class="best-collection-tag">Beauty</p>
-           </div> 
-
+           </div>
+           <div class="product-grid">
+                <div class="product-card">
+                    <img class="product-card-image" src="IMAGES/270x295.svg"/>
+                    <h1>Apple watch series</h1>
+                    <p>$30.00</p>
+               </div>
+               <div class="product-card">
+                    <img class="product-card-image" src="IMAGES/270x295.svg"/>
+                    <h1>Apple watch series</h1>
+                    <p>$30.00</p>
+                </div>
+                <div class="product-card">
+                    <img class="product-card-image" src="IMAGES/270x295.svg"/>
+                    <h1>Apple watch series</h1>
+                    <p>$30.00</p>
+                </div>
+                <div class="product-card">
+                    <img class="product-card-image" src="IMAGES/270x295.svg"/>
+                    <h1 class="product-card-header">Apple watch series</h1>
+                    <p class="product-card-price">$30.00</p>
+                </div> 
+                <div class="product-card">
+                    <img class="product-card-image" src="IMAGES/270x295.svg"/>
+                    <h1>Apple watch series</h1>
+                    <p>$30.00</p>
+                </div>
+                <div class="product-card">
+                    <img class="product-card-image" src="IMAGES/270x295.svg"/>
+                    <h1>Apple watch series</h1>
+                    <p>$30.00</p>
+                </div>
+                <div class="product-card">
+                    <img class="product-card-image" src="IMAGES/270x295.svg"/>
+                    <h1>Apple watch series</h1>
+                    <p>$30.00</p>
+                </div>
+                <div class="product-card">
+                    <img class="product-card-image" src="IMAGES/270x295.svg"/>
+                    <h1>Apple watch series</h1>
+                    <p>$30.00</p>
+                </div>      
+           </div>
         </div>
     </section>
     
