--- a/Home.html
+++ b/Home.html
@@ -56,6 +56,7 @@
     </section>
     <!--Showcase Stop-->
 
+    <!--Best Collection Start-->
     <section class="best-collection">
         <div class="container">
            <h1 class="best-collection-header">Best Collection</h1>
@@ -77,49 +78,142 @@
             <p class="best-collection-tag">Mobile</p>
             <p class="best-collection-tag">/</p>
             <p class="best-collection-tag">Beauty</p>
+            
            </div>
            <div class="product-grid">
                 <div class="product-card">
                     <img class="product-card-image" src="IMAGES/270x295.svg"/>
                     <h1>Apple watch series</h1>
-                    <p>$30.00</p>
+                    <div class="product-card-details">
+                        <div class="product-card-pricetags">
+                            <p class="original-price">$50.00</p>
+                            <p class="current-price">$30.00</p>
+                        </div>
+                        <a class="add-to-cart"><i class="fa-regular fa-cart-plus"></i></a>
+                    </div>
                </div>
                <div class="product-card">
                     <img class="product-card-image" src="IMAGES/270x295.svg"/>
-                    <h1>Apple watch series</h1>
-                    <p>$30.00</p>
+                    <h1>Table lamp</h1>
+                    <div class="product-card-details">
+                        <div class="product-card-pricetags">
+                            <p class="original-price">$50.00</p>
+                            <p class="current-price">$30.00</p>
+                        </div>
+                        <a class="add-to-cart"><i class="fa-regular fa-cart-plus"></i></a>
+                    </div>
                 </div>
                 <div class="product-card">
                     <img class="product-card-image" src="IMAGES/270x295.svg"/>
-                    <h1>Apple watch series</h1>
-                    <p>$30.00</p>
+                    <h1>Laptop thinkpad Lenovo</h1>
+                    <div class="product-card-details">
+                        <div class="product-card-pricetags">
+                            <p class="original-price">$50.00</p>
+                            <p class="current-price">$30.00</p>
+                        </div>
+                        <a class="add-to-cart"><i class="fa-regular fa-cart-plus"></i></a>
+                    </div>
                 </div>
                 <div class="product-card">
                     <img class="product-card-image" src="IMAGES/270x295.svg"/>
-                    <h1 class="product-card-header">Apple watch series</h1>
-                    <p class="product-card-price">$30.00</p>
+                    <h1 class="product-card-header">Table lamp</h1>
+                    <div class="product-card-details">
+                        <div class="product-card-pricetags">
+                            <p class="original-price">$50.00</p>
+                            <p class="current-price">$30.00</p>
+                        </div>
+                        <a class="add-to-cart"><i class="fa-regular fa-cart-plus"></i></a>
+                    </div>
                 </div> 
                 <div class="product-card">
                     <img class="product-card-image" src="IMAGES/270x295.svg"/>
-                    <h1>Apple watch series</h1>
-                    <p>$30.00</p>
+                    <h1>Gumshoes black fashion</h1>
+                    <div class="product-card-details">
+                        <div class="product-card-pricetags">
+                            <p class="original-price">$50.00</p>
+                            <p class="current-price">$30.00</p>
+                        </div>
+                        <a class="add-to-cart"><i class="fa-regular fa-cart-plus"></i></a>
+                    </div>
                 </div>
                 <div class="product-card">
                     <img class="product-card-image" src="IMAGES/270x295.svg"/>
-                    <h1>Apple watch series</h1>
-                    <p>$30.00</p>
+                    <h1>Woman white dress</h1>
+                    <div class="product-card-details">
+                        <div class="product-card-pricetags">
+                            <p class="original-price">$50.00</p>
+                            <p class="current-price">$30.00</p>
+                        </div>
+                        <a class="add-to-cart"><i class="fa-regular fa-cart-plus"></i></a>
+                    </div>
                 </div>
                 <div class="product-card">
                     <img class="product-card-image" src="IMAGES/270x295.svg"/>
-                    <h1>Apple watch series</h1>
-                    <p>$30.00</p>
+                    <h1>Kettle water boiler</h1>
+                    <div class="product-card-details">
+                        <div class="product-card-pricetags">
+                            <p class="original-price">$50.00</p>
+                            <p class="current-price">$30.00</p>
+                        </div>
+                        <a class="add-to-cart"><i class="fa-regular fa-cart-plus"></i></a>
+                    </div>
                 </div>
                 <div class="product-card">
                     <img class="product-card-image" src="IMAGES/270x295.svg"/>
-                    <h1>Apple watch series</h1>
-                    <p>$30.00</p>
-                </div>      
+                    <h1>Congee cooking rice cooker</h1>
+                    <div class="product-card-details">
+                        <div class="product-card-pricetags">
+                            <p class="original-price">$50.00</p>
+                            <p class="current-price">$30.00</p>
+                        </div>
+                        <a class="add-to-cart"><i class="fa-regular fa-cart-plus"></i></a>
+                    </div>
+                </div>
            </div>
+           <div class="load-more-btn">
+            <button >LOAD MORE <i class="fa-regular fa-spinner"></i></button>  
+           </div>
+        </div>
+    </section>
+    <!--Best Collection Stop-->
+
+    <section class="sale-50">
+        <div class="container">
+            <div class="sale-grid">
+                <div class="product-card-big">
+                    <img class="product-card-big-image" src="IMAGES/369x310.svg"/>
+                    <div class="product-card-big-content">
+                        <h1>Table Lamp - scelerisuq tempore</h1>
+                        <div class="product-card-big-details">
+                            <div class="product-card-big-pricetags">
+                                <p class="original-price">$50.00</p>
+                                <p class="current-price">$30.00</p>
+                            </div>
+                            <a class="add-to-cart"><i class="fa-regular fa-cart-plus"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="sale">
+                    <p class="up-to-sell">UP TO SELL</p>
+                    <h1 class="sale-header">50% OFF</h1>
+                    <p class="best-prices">Get The Best Price</p>
+                    <p class="sale-text">Get the best daily offer et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren no sea taki</p>
+                    <a href="#">Discover More</a>
+                </div>
+                <div class="product-card-big">
+                    <img class="product-card-big-image" src="IMAGES/369x310.svg"/>
+                    <div class="product-card-big-content">
+                        <h1>Table Lamp - scelerisuq tempore</h1>
+                        <div class="product-card-big-details">
+                            <div class="product-card-big-pricetags">
+                                <p class="original-price">$50.00</p>
+                                <p class="current-price">$30.00</p>
+                            </div>
+                            <a class="add-to-cart"><i class="fa-regular fa-cart-plus"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     
