Top Selling section done

--- a/Home.html
+++ b/Home.html
@@ -177,6 +177,7 @@
     </section>
     <!--Best Collection Stop-->
 
+    <!--Sale 50% OFF Start-->
     <section class="sale-50">
         <div class="container">
             <div class="sale-grid">
@@ -215,6 +216,92 @@
                 </div>
             </div>
         </div>
+    </section>
+    <!--Sale 50% OFF Stop-->
+
+    <!--Top Selling Start-->
+    <section class="top-selling">
+        <h1 class="top-selling-header">Top selling products in this week</h1>
+        <div class="top-selling-grid">
+            <div class="product-card">
+                <img class="product-card-image" src="IMAGES/270x295.svg"/>
+                <h1>Apple watch series</h1>
+                <div class="product-card-details">
+                    <div class="product-card-pricetags">
+                        <p class="original-price">$50.00</p>
+                        <p class="current-price">$30.00</p>
+                    </div>
+                    <a class="add-to-cart"><i class="fa-regular fa-cart-plus"></i></a>
+                </div>
+            </div>
+            <div class="product-card">
+                <img class="product-card-image" src="IMAGES/270x295.svg"/>
+                <h1>Apple watch series</h1>
+                <div class="product-card-details">
+                    <div class="product-card-pricetags">
+                        <p class="original-price">$50.00</p>
+                        <p class="current-price">$30.00</p>
+                    </div>
+                    <a class="add-to-cart"><i class="fa-regular fa-cart-plus"></i></a>
+                </div>
+            </div>
+            <div class="product-card">
+                <img class="product-card-image" src="IMAGES/270x295.svg"/>
+                <h1>Apple watch series</h1>
+                <div class="product-card-details">
+                    <div class="product-card-pricetags">
+                        <p class="original-price">$50.00</p>
+                        <p class="current-price">$30.00</p>
+                    </div>
+                    <a class="add-to-cart"><i class="fa-regular fa-cart-plus"></i></a>
+                </div>
+            </div>
+            <div class="product-card">
+                <img class="product-card-image" src="IMAGES/270x295.svg"/>
+                <h1>Apple watch series</h1>
+                <div class="product-card-details">
+                    <div class="product-card-pricetags">
+                        <p class="original-price">$50.00</p>
+                        <p class="current-price">$30.00</p>
+                    </div>
+                    <a class="add-to-cart"><i class="fa-regular fa-cart-plus"></i></a>
+                </div>
+            </div>
+            <div class="product-card">
+                <img class="product-card-image" src="IMAGES/270x295.svg"/>
+                <h1>Apple watch series</h1>
+                <div class="product-card-details">
+                    <div class="product-card-pricetags">
+                        <p class="original-price">$50.00</p>
+                        <p class="current-price">$30.00</p>
+                    </div>
+                    <a class="add-to-cart"><i class="fa-regular fa-cart-plus"></i></a>
+                </div>
+            </div>
+            <div class="product-card">
+                <img class="product-card-image" src="IMAGES/270x295.svg"/>
+                <h1>Apple watch series</h1>
+                <div class="product-card-details">
+                    <div class="product-card-pricetags">
+                        <p class="original-price">$50.00</p>
+                        <p class="current-price">$30.00</p>
+                    </div>
+                    <a class="add-to-cart"><i class="fa-regular fa-cart-plus"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="arrow-buttons">
+            <button class="button-left"><i class="fa-regular fa-chevron-left"></i></button>
+            <button class="button-right"><i class="fa-regular fa-chevron-right"></i></button>
+        </div>
+    </section>
+    <!--Top Selling Stop-->
+
+    <section class="">
+        <div class="container">
+
+        </div>
+
     </section>
     
 </body>
