product-detail-images fixed

--- a/Home.html
+++ b/Home.html
@@ -350,11 +350,13 @@
     </section>
     <!--Subscribe to newletter Stop-->
 
+    <!--Footer Start-->
     <footer class="footer">
         <div class="container">
             <p class="footer-text">&#169; 2023 bmarketo. All right reserved</p>
         </div>
     </footer>
+    <!--Footer Stop-->
     
 </body>
 </html>
